--- a/index.css
+++ b/index.css
@@ -86,7 +86,15 @@ h1 {
 h2 {
     font-size: 2.5rem;
     padding-top: 3rem;
+    padding-bottom: 2rem;
+    line-height: 105%;    
     
+}
+
+.textodpscard p {
+    width: 25rem;
+    text-align: center;
+    font-size: 1.25rem;
 }
 
 .hero-section p {
