--- a/copapirata/css/stylecopapirata.css
+++ b/copapirata/css/stylecopapirata.css
@@ -87,3 +87,51 @@ h2 {
     text-align: center;
     font-size: 0.80rem;
 }
+
+header {
+    border-color: var(--color-black);
+    border-style: solid;
+    border-width: 0 1px 1px 1px;
+    padding: 1.25rem;
+}
+
+header img {
+    display: block;
+    margin: 1rem auto;
+}
+
+header nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 1rem auto 0;
+
+}
+
+nav a {
+    color: #F6F111;
+    font-size: 1.5rem;
+    padding: .5rem;
+    text-decoration: none;
+
+}
+
+header nav a:nth-child(2n-1) {
+    text-align: right;
+
+}
+
+.button {
+    background-color: var(--color-primary);
+    border: 2px solid var(--color-black);
+    box-shadow: 4px 4px 0 var(--color-black);
+    color: var(--color-secondary);
+    display: block;
+    font-size: 1.25rem;
+    padding: .75rem 1rem;
+    max-width: 15rem;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: 1rem auto;
+    
+}
