--- a/copapirata/css/stylecopapirata.css
+++ b/copapirata/css/stylecopapirata.css
@@ -27,7 +27,7 @@ h1 {
     font-family: 'Pirata One';
     letter-spacing: 5px;
     font-size: 5rem;
-    color: #F6F111;
+    color: #FFC600;
 }
 
 table {
@@ -133,5 +133,13 @@ header nav a:nth-child(2n-1) {
     text-decoration: none;
     text-transform: uppercase;
     margin: 1rem auto;
+    
+}
+
+body {
+    background-image: url('../images/PIRATA6.svg');
+    background-position: center top;
+    background-repeat: no-repeat;
+    /* background-blend-mode: luminosity; */
     
 }
