--- a/index.css
+++ b/index.css
@@ -80,7 +80,7 @@ header nav a:nth-child(2n-1) {
 h1 {
     font-size: 3rem;
     line-height: 105%;
-    /*text-align: center;*/
+    margin: auto;
 }
 
 h2 {
