--- a/copapirata/css/csstimes.css
+++ b/copapirata/css/csstimes.css
@@ -183,3 +183,10 @@ body {
     max-width: 500px;
     max-height: 500px;
 }
+
+.linkinstamon a {
+    text-decoration: none;
+    color: #F6F111;
+    text-shadow: 1px 1px 1px black;
+    
+}
